src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>RPS_Date__c</fullName>
        <description>Date the Account was screened in Visual Compliance [PT # 126414043]</description>
        <inlineHelpText>Date the Account was screened in Visual Compliance</inlineHelpText>
        <label>RPS Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RPS_Status__c</fullName>
        <defaultValue>"Pending"</defaultValue>
        <description>RPS Screening Status in Visual Compliance [PT #126414043]</description>
        <inlineHelpText>RPS Screening Status in Visual Compliance</inlineHelpText>
        <label>RPS Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Region of the Account Owner</description>
        <formula>TEXT(Owner.Region__c)</formula>
        <inlineHelpText>Region of the Account Owner</inlineHelpText>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SendSafely_Dropzone__c</fullName>
        <formula>CASE(Special_Handling__c, "Standard", "https://securefiles.pivotal.io/dropzone/pdang", 
"EH - Executive Handling", "https://securefiles-sp.pivotal.io/dropzone/pdang",
"SP - Special Practices", "https://securefiles-sp.pivotal.io/dropzone/pdang",
"EU - Safe Harbour", "https://securefiles-eu.pivotal.io/dropzone/pdang",
"EU - Global Access","https://securefiles-eu.pivotal.io/dropzone/hgeisert",
"https://securefiles.pivotal.io/dropzone/pdang")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SendSafely Dropzone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Handling__c</fullName>
        <description>Pivotal tracker #[121533025] : EHSP desgination/rules on Account</description>
        <inlineHelpText>Identifies customers requesting Special Handling regarding their identity and data. This includes Federal Government or commercial entities that require specific processes and personnel for management of their support tickets.</inlineHelpText>
        <label>Special Handling</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>EH - Executive Handling</fullName>
                </value>
                <value>
                    <fullName>SP - Special Practices</fullName>
                </value>
                <value>
                    <fullName>EU - Safe Harbour</fullName>
                </value>
                <value>
                    <fullName>EU - Global Access</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Super_Parent_Account_ID__c</fullName>
        <formula>IF(ISNULL(Parent.Account_ID18__c),Parent.Account_ID18__c,Account_ID18__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Super Parent Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Super_Parent_Account__c</fullName>
        <formula>IF(Parent.Name &lt;&gt; "",Parent.Name, Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Super Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Super_Parent_Country__c</fullName>
        <description>Country for the Super Parent Company</description>
        <formula>IF(Parent.Name &lt;&gt; "",Parent.BillingCountry ,  BillingCountry )</formula>
        <label>Super Parent Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Exceptions_Granted__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Displays Count of all cases associated to an account, where Entitlement is Support Exception, Resolution Code is Not-Entitled.</description>
        <label>Support Exceptions Granted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Support_Exceptions_Rejected__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Displays Count of all cases associated to an account, where Entitlement is Support Exception, Resolution Code is not-Entitled.</description>
        <label>Support Exceptions Rejected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TCAP__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Total Cloud Adoption Program - refers to customers who have ELAs or "unlimited" pcf deals</inlineHelpText>
        <label>TCAP?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Theater__c</fullName>
        <description>Theater of the Account Owner</description>
        <formula>TEXT(Owner.Theater__c)</formula>
        <inlineHelpText>Theater of the Account Owner</inlineHelpText>
        <label>Theater</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Buy_Count__c</fullName>
        <label>Total Buy Count (Open)</label>
        <summaryFilterItems>
            <field>Opportunity.Buy_Count_Open__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Number_of__c</fullName>
        <inlineHelpText>sum of Team Members with role of PA or Resident PA</inlineHelpText>
        <label>Total Number of FTE PA's</label>
        <summaryFilterItems>
            <field>Team_Member__c.Team_Member_Role__c</field>
            <operation>equals</operation>
            <value>Resident PA, Platform Architect</value>
        </summaryFilterItems>
        <summaryForeignKey>Team_Member__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>VMWare_ELA_Targetamt__c</fullName>
        <label>VMWare ELA Target Amount</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VMWare_Pivotal_Container_Specialist__c</fullName>
        <label>VMWare Pivotal Container Specialist</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VMWare_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Search for and select a Contact attached to a VMWare account</inlineHelpText>
        <label>VMWare Rep</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (VMWare Rep)</relationshipLabel>
        <relationshipName>Contact_VMW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VMWware_ELA_Target_Quarter__c</fullName>
        <label>VMWware ELA Target Quarter</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VMware_ELA_Target__c</fullName>
        <label>VMware ELA Target?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VMware_Target__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VMware Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Virtustream_Rep_Name__c</fullName>
        <label>Virtustream Rep</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Company_Was_Founded__c</fullName>
        <label>Year Company Was Founded</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZenDesk_ID__c</fullName>
        <description>FOR THE ZenDesk IDs for the Account.</description>
        <externalId>true</externalId>
        <label>ZenDesk ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>dts_account__c</fullName>
        <description>Dell Technology 50 dashboard - this indicates the mapped account # (eg "Home Depot") to pull for extract.   Note that many SF Accounts (parent/children) may be mapped to a single DT50 ID.</description>
        <label>DT50 ID</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xBookedOpps__c</fullName>
        <description>Temporary for data cleanup - count of booked Opps for this account</description>
        <label>BookedOpps</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Booked</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>xDedupe_Include__c</fullName>
        <description>Traction on Demand used for dedupe</description>
        <label>xDedupe_Include</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xOpenOpps__c</fullName>
        <description>Temporary for data cleanup - count of currently open opportunities</description>
        <label>OpenOpps</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Booked, Closed Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Pivotal_Customer_Number__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
        <sharedTo>
            <group>All_Internal_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Governance_Pending_AMER</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Governance_Status__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>Created_By_Region__c</columns>
        <columns>Created_by_Theater__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Governance_Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <filters>
            <field>Created_by_Theater__c</field>
            <operation>equals</operation>
            <value>AMER</value>
        </filters>
        <filters>
            <field>Created_By_Region__c</field>
            <operation>notContain</operation>
            <value>ISR</value>
        </filters>
        <label>Governance Pending AMER</label>
        <sharedTo>
            <group>SFDC_Support</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Governance_Pending_APJ</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Governance_Status__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>Created_By_Region__c</columns>
        <columns>Created_by_Theater__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Governance_Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <filters>
            <field>Created_by_Theater__c</field>
            <operation>equals</operation>
            <value>APJ</value>
        </filters>
        <label>Governance Pending APJ</label>
        <sharedTo>
            <group>SFDC_Support</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Governance_Pending_All</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Governance_Status__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>Created_By_Region__c</columns>
        <columns>Created_by_Theater__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Governance_Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>Governance Pending All</label>
        <sharedTo>
            <group>SFDC_Support</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Governance_Pending_ISR</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Governance_Status__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>Created_By_Region__c</columns>
        <columns>Created_by_Theater__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Governance_Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <filters>
            <field>Created_By_Region__c</field>
            <operation>contains</operation>
            <value>ISR</value>
        </filters>
        <label>Governance Pending ISR</label>
        <sharedTo>
            <group>SFDC_Support</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Governance_Pending_LABS</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Governance_Status__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>Created_By_Region__c</columns>
        <columns>Created_by_Theater__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Governance_Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <filters>
            <field>Created_by_Theater__c</field>
            <operation>equals</operation>
            <value>LABS</value>
        </filters>
        <label>Governance Pending LABS</label>
        <sharedTo>
            <group>SFDC_Support</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Named_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ISR__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.ADDRESS1_COUNTRY_CODE</field>
            <operation>equals</operation>
            <value>GB</value>
        </filters>
        <label>Named Accounts</label>
        <sharedTo>
            <group>SFDC_Support</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PVTLAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>refedge__RUL_Last_Activity_Date__c</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>Pivotal</value>
        </filters>
        <label>Pivotal Accounts</label>
        <sharedTo>
            <group>All_Internal_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Partner_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Partner_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filters>
        <label>Partner Accounts</label>
        <sharedTo>
            <group>All_Internal_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SP_Accounts</fullName>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Special_Handling__c</field>
            <operation>equals</operation>
            <value>SP - Special Practices</value>
        </filters>
        <label>SP Accounts</label>
    </listViews>
    <listViews>
        <fullName>Visual_compliance_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Governance_Status__c</columns>
        <columns>RPS_Date__c</columns>
        <columns>RPS_Status__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RPS_Status__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>xBookedOpps__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>RPS_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Visual compliance Accounts</label>
        <sharedTo>
            <group>All_Internal_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X1_My_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>Focus_Account__c</columns>
        <columns>Named_Account__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>1 - My Accounts</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <validationRules>
        <fullName>AC001_Limit_Account_Owner_Change</fullName>
        <active>true</active>
        <description>Only SysAdmin and Business Operations or Order Management can change account owners</description>
        <errorConditionFormula>NOT(($Profile.Name = "Pivotal - Business Operations") || ($Profile.Name = "System Administrator") || ($Profile.Name = "Pivotal - Order Management")) &amp;&amp; (PRIORVALUE(OwnerId ) &lt;&gt; OwnerId)</errorConditionFormula>
        <errorMessage>Please contact your Business Manager to change account ownership [AC001].</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AC002_Year_Company_was_founded</fullName>
        <active>true</active>
        <description>Year the company was founded should be a 4 digit number</description>
        <errorConditionFormula>(!(ISNUMBER(Year_Company_Was_Founded__c)) 
|| Len(Year_Company_Was_Founded__c) &gt; 4 
|| VALUE(Year_Company_Was_Founded__c) &gt; YEAR(Today()) 
|| VALUE(Year_Company_Was_Founded__c) &lt; 1800)
&amp;&amp;!ISBLANK(Year_Company_Was_Founded__c)</errorConditionFormula>
        <errorDisplayField>Year_Company_Was_Founded__c</errorDisplayField>
        <errorMessage>Please enter a valid 4 digit year, example 2010 [AC002].</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Governance_status_Approval</fullName>
        <active>true</active>
        <description>Governance status can't be set to approved if the Account is flagged as risk country.

This validation fires when account is flagged as risk country by compliance tool.</description>
        <errorConditionFormula>NOT(OR(CONTAINS(RPS_Status__c,'No Matches'),CONTAINS(RPS_Status__c,"Pending"), ISBLANK(RPS_Status__c))) &amp;&amp;  ISPICKVAL(PRIORVALUE(Governance_Status__c), "Pending")&amp;&amp; TEXT(Governance_Status__c)= "Approved" &amp;&amp;  Cleared_by_Compliance_Team__c !=true</errorConditionFormula>
        <errorMessage>This account is flagged by export compliance screening tool. Pivotal Trade Compliance has been notified,will review this account.
If you have any questions in the meantime, please contact export@pivotal.io.</errorMessage>
    </validationRules>
</CustomObject>